--- a/database/phb/22.01.14.md
+++ b/database/phb/22.01.14.md
@@ -31,6 +31,14 @@
 
 
 
+<br/>
+
+
+
+---
+
+
+
 ## 2. 정규화
 
 ### 1) 정규화
@@ -70,6 +78,14 @@
 
 
 
+<br/>
+
+
+
+---
+
+
+
 ## 3. 반정규화
 
 ### 1) 반정규화
@@ -84,9 +100,14 @@
 
 - 디스크 I/O량이 많아서 조회 성능이 저하될 때
 
-  
 
 
+
+<br/>
+
+
+
+---
 
 ## 4. 트랜잭션
 
@@ -107,4 +128,71 @@
 
 
 ### 3) REDO/UNDO
+
+- REDO : 이전 상태로 복구하고 실패 발생전까지의 과정을 그대로 따라가는 것
+  - 정상 기록을 log로 남기고 그 log를 따라감
+- UNDO : 트랜잭션 이전 상태로 되돌리는 것 (롤백)
+  - 사용자가 했던 작업을 반대로 진행
+
+<details>
+    <summary>참고</summary>
+    <ul>
+		<li>https://writemylife.tistory.com/50</li>
+    </ul>
+</details>
+
+
+
+<br/>
+
+
+
+---
+
+
+
+## 5. 인덱스
+
+### 1) 인덱스
+
+- 책의 목차와 같은 것
+
+
+
+### 2) 인덱스 대상
+
+- where절에 사용할 칼럼에 대한 효율화
+- 조회시 자주 사용하고 고유한 값  위주로
+  - ex) 성별과 같은 인덱스에 사용하면 최악
+- insert가 자주 일어나지 않는 테이블
+  - 기존 인덱스 테이블을 다시 만들어야하기 때문
+
+
+
+### 3) 인덱스 구조
+
+- 해시테이블
+
+  - key - value 구조
+  - 등호(=) 연산에만 특화. 부등호(<. >) 연산에서는 성능 구림
+
+  ![image](https://user-images.githubusercontent.com/36289638/149508327-234bc803-a1c2-4e4f-881e-0291cf4f807c.png)
+
+- B-tree 
+
+  - 균형잡힌 트리구조, 시간복잡도 O(logN)
+
+
+
+**✏️ B-tree, B+tree 차이 좀 더 찾아보기**
+
+
+
+<details>
+    <summary>참고</summary>
+    <ul>
+		<li>https://yurimkoo.github.io/db/2020/03/14/db-index.html</li>
+        <li>https://velog.io/@syleemk/%EB%A9%B4%EC%A0%91-%EB%8C%80%EB%B9%84-%EB%8D%B0%EC%9D%B4%ED%84%B0%EB%B2%A0%EC%9D%B4%EC%8A%A4-%EC%9D%B8%EB%8D%B1%EC%8A%A4</li>
+    </ul>
+</details>
 
