[UPDATE] 6_교착상태.md

--- a/database/ljh/6_교착상태.md
+++ b/database/ljh/6_교착상태.md
@@ -53,13 +53,12 @@
 
 <br />
 
-### 교착상태교착상태(DeadLock) 탐지하는 방법
+### 교착상태(DeadLock) 탐지하는 방법
 
 > 교착상태가 발생했는 지 알아내기 위해 사용하는 알고리즘은 Union-Find 알고리즘입니다.
 > 그래프 형태로 표현이 가능하며, 사이클(Cycle)이 존재하는지의 여부로 교착 상태가 발생했는지 확인할 수 있습니다.
 
 <img width="679" alt="스크린샷 2022-01-17 오전 9 37 10" src="https://user-images.githubusercontent.com/60912550/149684653-7e683cc3-dce3-4fab-949c-b0519e79d8c4.png">
-9c98b24001.png">
 
 * 예를 들어 위와 같이 트랜잭션이 처리된다고 할 때 수행순서 (8) 때의 대기 그래프는 다음과 같다.
 
