--- a/database/phb/22.01.19.md
+++ b/database/phb/22.01.19.md
@@ -78,4 +78,16 @@
   ```
 
   
+  <br/>
+  
+  들으면서 초면이었떤거!
+
+✍️ Lock
+
+- Optimistic Lock  - 개발자가 직접 구현
+- Pessimistic Lock - DB에서 제공
+  - shared
+  - exclusive
+
+
 
