Feat: Transaction Isolation Level

--- a/database/phb/22.01.26.md
+++ b/database/phb/22.01.26.md
@@ -2,10 +2,12 @@
 
 ### RDBMS
 
-- MySQL, Oracle, PostGresql
+- MySQL, Oracle, SQLite, MariaDB, PostGreSQL(9.2이상부터 JSON 지원) ...
 - 스키마가 있어서 형식적이고 스키마 변경될 일이 있으면 비용이 많이 든다.
 
+- col, row 형태로 저장
 
+  
 
 ### NoSQL
 
@@ -13,3 +15,43 @@
 - 스키마가 없어서 유연한 구조를 가지지만 데이터 중복이 발생할 수 있으며 데이터 변경 시에 무결성을 보장할 수 없다.
 - JSON처럼 key-value 쌍으로 나타남
 
+
+
+### 명령어 차이
+
+|        | MySQL(RDBMS)                               | MongoDB(NoSQL)                     |
+| ------ | ------------------------------------------ | ---------------------------------- |
+| insert | insert TABLE into values (col1, col2, ...) | db.TABLE.insert({"KEY" : "VALUE"}) |
+| delete | delete from TABLE                          | db.TABLE.remove({"KEY" : "VALUE"}) |
+| select | select col1, col2 ... from TABLE           | db.TABLE.find({"KEY" : "VALUE"})   |
+| drop   | drop TABLE                                 | db.TABLE.drop()                    |
+
+
+
+
+
+<br/>
+
+
+
+
+
+## 트랜잭션 격리수준
+
+| Isolation Level              | Explain                                                      | Dirty <br/>Read | Non-<br/>Repeatable <br/>Read | Phantom <br/>Read |
+| ---------------------------- | ------------------------------------------------------------ | --------------- | ----------------------------- | ----------------- |
+| READ UNCOMMIT <br/>(level 0) | 커밋되지 않은 데이터 읽기 가능                               | O               | O                             | O                 |
+| READ COMMIT <br/>(level 1)   | 커밋된 데이터만 읽기 가능                                    | X               | O                             | O                 |
+| REPEATABLE <BR/>(level 2)    | 한 TX 사이에 조회된 값은 계속 같은 값이 조회                 | X               | X                             | O                 |
+| SERIALIZABLE<BR/>(level3)    | TX이 READ를 하면 다른 TX가 해당 테이블에 데이터 추가/변경/삭제 불가능 | X               | X                             | X                 |
+
+
+
+### Problem
+
+- Dirty Read
+  - 데이터가 전혀 다른 값으로 읽히는 현상
+- Non-Repeatable Read
+  -   하나의 TX에서 같은 값을 조회하는데 서로 다른 값이 검색되는 현상
+- Phantom Read 
+  - 유령처럼 기존에 READ했던 데이터가 사라지거나 없던 데이터가 생기는 현상
